<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="mobile_top_menu">Open menu</string>
    <string name="mobile_top_notifications">Notifications</string>
    <string name="mobile_top_avatar">Account menu</string>
    <string name="mobile_top_avatar_open_cd">Open</string>
    <string name="mobile_top_avatar_closed_cd">Closed</string>
    <string name="mobile_top_title_action">Change date</string>
    <string name="date_picker_confirm">OK</string>
    <string name="date_picker_cancel">Cancel</string>
    <string name="nav_account_profile">Profile</string>
    <string name="nav_account_subscription">Subscription</string>
    <string name="nav_account_tokens">Access Tokens</string>
    <string name="nav_account_sign_out">Sign out</string>
    <string name="shell_account_signed_in">Signed in</string>
    <string name="shell_account_sign_out_confirm">You\'ll need to sign in again to use the app.</string>
    <string name="nav_preferences">Preferences</string>
    <string name="nav_setting">Setting</string>
    <string name="mobile_day_header_pattern" translatable="false">MMM d (EEE)</string>
    <string name="avatar_image_cd">Account avatar</string>
    <string name="common_dismiss_cd">Dismiss</string>
    <string name="search_label">Search</string>
    <string name="fab_create">Create</string>
    <string name="mobile_tab_tasks">Tasks</string>
    <string name="mobile_tab_all_events">All events</string>
    <string name="avatar_user_cd">%1$s avatar</string>
    <string name="mobile_top_scale_cd">Scale: %1$s</string>
    <string name="endpoint_start_tile">Start tile</string>
    <string name="endpoint_complete_tile">Complete tile</string>
    <string name="endpoint_defer_tile">Defer tile</string>
    <string name="endpoint_delete_tile">Delete tile</string>
    <string name="endpoint_start_break">Start break</string>
    <string name="endpoint_extend_tile">Extend +10</string>
    <string name="endpoint_trigger_prompt">Trigger prompt</string>
    <string name="endpoint_create_tile">Create tile</string>
    <string name="endpoint_list_tiles">List tiles</string>
    <string name="endpoint_list_events">List events</string>
    <string name="endpoint_list_integrations">List integrations</string>
    <string name="endpoint_connect_integration">Connect integration</string>
    <string name="endpoint_disconnect_integration">Disconnect integration</string>
    <string name="endpoint_update_preferences">Update preferences</string>
    <string name="endpoint_get_preferences">Get preferences</string>
    <string name="endpoint_sign_out">Sign out</string>
    <string name="endpoint_refresh_token">Refresh token</string>
    <string name="endpoint_schedule_tile">Schedule tile</string>
    <string name="endpoint_unschedule_tile">Unschedule tile</string>
    <string name="endpoint_acknowledge_prompt">Acknowledge prompt</string>
    <string name="endpoint_snooze_prompt">Snooze prompt</string>
    <string name="endpoint_read_runtime_state">Read runtime state</string>
</resources>
